--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,12 @@
 <resources>
 
     <string name="app_name">Sliding Puzzle</string>
+    <string name="title_activity_single_fragment">SingleFragmentActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="victory">You win!</string>
+    <string name="next_button">Next puzzle</string>
 
 </resources>
